--- a/index.html
+++ b/index.html
@@ -21,5 +21,59 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="container">
+        <div class="product one">
+          <img
+            src="./images/cybercat.png"
+            alt="Cyber Cat"
+            height="300"
+            width="400"
+          />
+          <h3>Product 1</h3>
+          <p>$1,999.99</p>
+          <button>Add to cart</button>
+        </div>
+        <div class="product two">
+          <img
+            src="./images/cyberpunk.png"
+            alt="Cyber Punk"
+            height="300"
+            width="400"
+          />
+          <h3>Product 2</h3>
+          <p>$50,000</p>
+          <button>Add to cart</button>
+        </div>
+        <div class="product three">
+          <img
+            src="./images/cyberraining.png"
+            alt="Cyber Punk raining"
+            height="300"
+            width="400"
+          />
+          <h3>Product 3</h3>
+          <p>$30,000</p>
+          <button>Add to cart</button>
+        </div>
+        <div class="product four">
+          <img
+            src="./images/cybercute.png"
+            alt="Cyber Punk is raining"
+            height="300"
+            width="400"
+          />
+          <h3>Product 4</h3>
+          <p>$499.99</p>
+          <button>Add to cart</button>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <p>&copy; M&M Inc. All right reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
